classDiagram
    %% ==================== CORE MATCHING ENGINE ====================
    class MatchingEngine {
        -Map~String, OrderBook~ orderBooks
        +processOrder(PlaceOrderCommandDTO) List~TradeEventDTO~
        +cancelOrder(String, String) boolean
        +getOrderBookSnapshot(String) Map
    }
    class OrderBook {
        -String creditId
        +matchOrder(PlaceOrderCommandDTO) List~TradeEventDTO~
        +addOrder(OrderNode)
        +removeOrder(String) boolean
    }
    
    %% ==================== DATA STRUCTURES ====================
    class TradeEventDTO {
        -String tradeId
        -String buyOrderId
        -String sellOrderId
        -String creditId
        -Integer amount
        -BigDecimal price
        -BigDecimal totalValue
        -LocalDateTime tradeAt
    }
    class OrderBookUpdateDTO {
        -String creditId
        -List~PriceLevel~ bids
        -List~PriceLevel~ asks
    }

    %% ==================== RELATIONSHIPS ====================
    MatchingEngine *-- OrderBook : Contains
    MatchingEngine ..> TradeEventDTO : Produces
    OrderBook ..> TradeEventDTO : Produces
